[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/MenuUI.gd" type="Script" id=1]
[ext_resource path="res://ui/balkara_font/balkara_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/balkara_font/balkara_32.tres" type="DynamicFont" id=3]

[node name="MenuUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ButtonStart" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 156.0
margin_right = 200.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 3 )
text = "START"

[node name="ButtonQuit" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 251.0
margin_right = 200.0
margin_bottom = 310.0
custom_fonts/font = ExtResource( 3 )
text = "QUIT"

[node name="SoundLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = -56.0
custom_fonts/font = ExtResource( 2 )
text = "VOLUME"

[node name="SoundVolume" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -63.0
margin_right = 200.0
margin_bottom = -30.0
max_value = 1.0
step = 0.01

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="drag_ended" from="SoundVolume" to="." method="_on_SoundVolume_drag_ended"]
[connection signal="value_changed" from="SoundVolume" to="." method="_on_SoundVolume_value_changed"]
